# haive-games

./: .gitignore  .pre-commit-config.yaml  AUTOMATED_CLEANUP_TOOLS.md  COMPREHENSIVE_GAMES_DOCUMENTATION.md  COMPREHENSIVE_TEST_RESULTS.md  DATA_COLLECTION_SUMMARY.md  DOCUMENTATION.md  END_TO_END_TEST_RESULTS.md  FINAL_COMPLETION_REPORT.md  FINAL_COMPREHENSIVE_TEST_RESULTS.md  GAME_IMPORT_FIXES_LOG.md  README.md  RUNNING_GAMES.md  clean_all_init_files.py  create_comprehensive_runs_data.py  debug_agent_creation_detailed.py  debug_exact_hang_point.py  debug_tic_tac_toe_simple.py  debug_visualization_issue.py  demo_working_games.py  fix_all_imports.py  fix_all_relative_imports.py  fix_imports.py  fix_monopoly_imports.py  game_status_report_20250806_162850.json  game_status_report_20250806_163613.json  game_status_report_20250806_165507.json  generate_game_docs.py  generate_simple_docs.py  identify_working_games.py  pyproject.toml  pyrightconfig.json.disabled  run-debug.sh  run.sh  test_agent_creation_fix.py  test_all_examples_end_to_end.py  test_blackjack_import.py  test_fix_agent_visualization.py  test_games_imports.py  test_games_with_data_collection.py  (+6 more)
.trunk/: .gitignore  trunk.yaml
docs/: ARCHITECTURE.md  GAMES_OVERVIEW.md  GAME_CATEGORIES.md  GETTING_STARTED.md  README.md  TOURNAMENT_SYSTEM.md  TROUBLESHOOTING.md  export_requirements.py  requirements.txt
docs/auto-generated/: index.html  search.js
docs/source/: api_reference.rst  changelog.rst  common_module_overview.rst  common_utilities.rst  concepts.rst  conf.py  conf.py.backup  configuration.rst  engine_architecture.rst  examples.rst  game_categories.rst  getting_started.rst  graph_workflows.rst  index.rst  installation.rst  overview.rst  persistence_layer.rst  schema_system.rst  social_psychology_games.rst  tool_integration.rst  tournament_system.rst  vectorstore_example_enhanced.rst
docs/source/_autosummary/: haive.core.models.vectorstore.VectorStoreConfig.rst  haive.core.models.vectorstore.VectorStoreProvider.rst
docs/source/autoapi/: index.rst
examples/: GALLERY_HEADER.rst  README.md  chess_api_example.py  configurable_agents_demo.py  connect4_working_example.py  general_api_example.py  generic_agents_demo.py  run_among_us.py  standardized_api_integration.py  tic_tac_toe_example.py
examples/haive/games/: example.py
project_docs/: CURRENT_STATUS_AND_NEXT_STEPS.md  DOCUMENTATION_ENHANCEMENT_REPORT.md  DOCUMENTATION_WORKFLOW.md  HAIVE_GAMES_DEVELOPER_GUIDE.md  PENDING_FIXES.md  README.md
project_docs/analysis/: GAMES_ANALYSIS_REPORT.md
project_docs/summaries/: GAME_TESTING_SUMMARY.md
scripts/: README.md  add_docstrings.py
scripts/cleanup/: clean_all_init_files.py  fix_monopoly_imports.py
scripts/data/: create_comprehensive_runs_data.py
scripts/debug/: debug_agent_creation_detailed.py  debug_exact_hang_point.py  debug_tic_tac_toe_simple.py  debug_visualization_issue.py
scripts/development/: demo_working_games.py  generate_game_docs.py  identify_working_games.py
scripts/templates/: MODULE_DOCSTRING_TEMPLATE.txt  README_TEMPLATE.md
src/haive/games/: README.md  VERSION.md  __init__.py  benchmark.py  (+2 more)
src/haive_games/: benchmark.py
tests/: __init__.py  conftest.py  run_tic_tac_toe_tests.py  test_all_games_end_to_end.py  test_among_us_models.py  test_among_us_state.py  test_among_us_state_manager.py  test_basic.py  test_battleship_agent.py  test_battleship_models.py  test_battleship_state.py  test_checkers_agent.py  test_checkers_models.py  test_checkers_state.py  test_checkers_state_manager.py  test_chess_generic.py  test_clue_agent.py  test_clue_models.py  test_clue_state.py  test_common_structure.py  test_connect4_agent.py  test_connect4_generic.py  test_connect4_models.py  test_connect4_state_manager.py  test_dominoes_agent.py  test_dominoes_models.py  test_dominoes_state.py  test_fox_and_geese_models.py  test_fox_and_geese_state.py  test_games_functionality.py  test_games_integration.py  test_llm_factory_debug.py  test_mafia_agent.py  test_mafia_models.py  test_mafia_state.py  test_mafia_state_manager.py  test_mastermind_agent.py  test_mastermind_models.py  test_mastermind_state_manager.py  test_monopoly.py  (+10 more)
tests/data_collection/: test_games_with_data_collection.py
tests/debug/: diagnose_games_import.py  test_agent_creation_fix.py  test_fix_agent_visualization.py  test_games_imports.py  test_mermaid_directly.py
tests/examples/: test_examples_simple.py
tests/experimental/: test_all_examples_end_to_end.py  test_real_examples_with_data.py  test_tic_tac_toe_example_fixed.py  test_tic_tac_toe_with_visualization.py
tests/functionality/: test_basic_game.py  test_chess_fixed.py  test_chess_simple.py  test_connect4_fixed.py  test_game_imports.py  test_isolated_models.py  test_nim_fixed.py  test_simple_tic_tac_toe.py  test_tic_tac_toe_fixed.py
tests/integration/: __init__.py  quick_game_test.py  validate_games.py
tests/poker/: test_poker_agent.py
tests/unit/: __init__.py  fixes_test.py  minimal_test.py  mock_test.py  relative_test.py  standalone_test.py  standalone_ui_test.py  test_custom_game.py  test_fixes.py  test_mafia.py  test_ui.py
tournament_tools/scripts/: check_working_games.py  claude_vs_openai_final_tournament.py
(+1300 files in other folders)
