[tool.poetry]
name = "haive-games"
version = "0.1.0"
description = "haive-games for Haive framework"
authors = ["pr1m8 <william.astley@algebraicwealth.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "haive", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
haive-agents = { path = '../haive-agents', develop = true }
pydantic = "^2.10.6"
langchain = "^0.3.20"
langchain-core = "^0.3.44"
langgraph = "^0.3.5"
sgfmill = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
monkeytype = "^23.3.0"
ruff = "^0.12.5"
autoflake = "^2.3.1"
docformatter = "^1.7.7"
autopep8 = "^2.3.2"
pyupgrade = "^3.20.0"
poetry-plugin-export = "^1.9.0"
add-trailing-comma = "^3.2.0"
rope = "^1.14.0"


[tool.poetry.group.games-chess.dependencies]
chess = "^1.11.2"


[tool.poetry.group.games.dependencies]
sgfmill = "^1.1.1"


[tool.poetry.group.go.dependencies]
sgfmill = "^1.1.1"

[tool.poetry.group.docs.dependencies]
# Documentation dependencies
sphinx = "^8.2.3"
sphinx-autoapi = "^3.6.0"
sphinx-autodoc-typehints = "^3.1.0"
furo = "^2024.8.6"
myst-parser = "^4.0.1"
sphinx-copybutton = "^0.5.2"
sphinx-togglebutton = "^0.3.2"
sphinx-design = "^0.6.1"
sphinx-tabs = "^3.4.5"
sphinx-inline-tabs = "^2023.4.21"
sphinxcontrib-mermaid = "^1.0.0"
sphinxcontrib-plantuml = "^0.30"
sphinxcontrib-blockdiag = "^3.0.0"
sphinxcontrib-seqdiag = "^3.0.0"
sphinx-codeautolink = "^0.17.0"
sphinx-exec-code = "^0.16"
sphinx-runpython = "^0.4.0"
sphinx-sitemap = "^2.6.0"
sphinx-last-updated-by-git = "^0.3.8"
sphinxext-opengraph = "^0.10.0"
sphinx-reredirects = "^1.0.0"
sphinx-favicon = "^1.0.1"
sphinxemoji = "^0.3.1"
sphinx-tippy = "^0.4.3"
sphinx-notfound-page = "^1.0.4"
# sphinx-toggleprompt = "^0.5.2"  # Incompatible with Sphinx 8
sphinx-issues = "^5.0.0"
sphinx-git = "^11.0.0"
sphinx-changelog = "^1.6.0"
sphinx-prompt = "^1.9.0"
enum-tools = "^0.13.0"
sphinx-toolbox = "^3.8.1"
seed-intersphinx-mapping = "^1.2.2"
sphinx-autobuild = "^2024.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration for linting and formatting
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "W",      # pycodestyle errors and warnings
  "F",      # Pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "TID251", # Banned relative imports -> absolute imports
]

[tool.ruff.lint.isort]
known-first-party = ["haive"]
force-sort-within-sections = true
